--- a/index.html
+++ b/index.html
@@ -3,6 +3,44 @@
 lang=en-US><head>
  <script src="https://resources.crowdtwist.com/v259/widgets/javascripts/widgets-sdk.0.3.0.js"></script>
 
+ <style>
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container img {
+  width: 100%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+
+  border-radius: 5px;
+  text-align: center;
+}
+
+.container .btn:hover {
+  background-color: black;
+}
+</style>
+ 
 <meta
 charset="UTF-8"><meta
 name="viewport" content="width=device-width, initial-scale=1"><link
@@ -331,6 +369,12 @@ class=header-search></span></fieldset></form></div></div></div></header>
 Earn 24K Rewards
 </h2>
 <div class="ct-widget" data-widget-id="14584" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14584"></div>
+ 
+ <div class="container">
+  <img src="http://dl.t7links.com/resource/winningslots/spin_btn.png" alt="Snow" style="width:50%">
+  
+</div>
+ 
 <div class="ct-widget" data-widget-id="14710" data-src="https://ascent7-widgets.crowdtwist.com/widgets/t/activity-list/14710"></div>
 <h2 style="background-color:#06638e;color:white">
 Use 24K Rewards
